# War3ModelViewer

./: CMakeLists.txt  ModelParser.cpp  ModelParser.h  ModelViewer.cpp  ModelViewer.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  package-lock.json  package.json  service.js  settingsdialog.cpp  settingsdialog.h  start.bat
res/shaders/: fragment.glsl  vertex.glsl
service/: package-lock.json  package.json
src/: ModelParser.cpp  ModelParser.h  ModelViewer.cpp  ModelViewer.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
